@@ -19,8 +19,8 @@ package org.apache.jackrabbit.oak.security.user.autosave;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.Iterator;
-import java.util.List;
 
 import static org.junit.Assert.assertNull;
 import static org.mockito.ArgumentMatchers.any;
@@ -32,8 +32,9 @@ public class AuthorizableWrapperTest extends AbstractAutoSaveTest {
 
     @Test
     public void testApplyNull() {
-        Iterator<Authorizable> it = AuthorizableWrapper.createIterator(List.of(null, (Authorizable) null).iterator(), autosaveMgr);
-        while(it.hasNext()) {
+        Iterator<Authorizable> it = AuthorizableWrapper.createIterator(Arrays.asList(new Authorizable[] { null, null }).iterator(),
+                autosaveMgr);
+        while (it.hasNext()) {
             assertNull(it.next());
         }
         verify(autosaveMgr, never()).wrap(any(Authorizable.class));
@@ -41,8 +42,9 @@ public class AuthorizableWrapperTest extends AbstractAutoSaveTest {
 
     @Test
     public void testApply() throws Exception {
-        Iterator<Authorizable> it = AuthorizableWrapper.createIterator(List.of(getTestUser(), (Authorizable) null).iterator(), autosaveMgr);
-        while(it.hasNext()) {
+        Iterator<Authorizable> it = AuthorizableWrapper
+                .createIterator(Arrays.asList(new Authorizable[] { getTestUser(), null }).iterator(), autosaveMgr);
+        while (it.hasNext()) {
             it.next();
         }
         verify(autosaveMgr, times(1)).wrap(any(Authorizable.class));
